--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# generated compute instance keys
+keys/
 
-# Other files and folders
-.settings/
+# .tfstate files
+*.tfstate
+*.tfstate.*
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+# local .terraform directories
+**/.terraform/*
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+notes.md
